# faes-website

./: .gitignore  CLAUDE.md  README.md  config.yml  content  pyproject.toml  translations.txt
.claude/: bootstrap.md  codereview.md  codereviewalt.md  codereviewnew.md  literate.md  process.md  settings.local.json
.claude/commands/: checkpoint.md  newsesh.md
.claude/templates/: feature-template.md  issue_template.md
.github/workflows/: deploy.yml
content/: README.md  all_bank_transactions.csv  contacts.csv  current_contacts.csv  grants.csv  grants_claude.csv  grantsdetailed.csv  history.md  reconcile_tripple.csv  reconciled_double.csv
content/grants/: 2024-community-support.md
content/pages/: about.md  about_papiamentu.md  home.md  home_papiamentu.md  mission.md  mission_papiamentu.md
content/people/: harlan-cohen.md  harlan-cohen_papiamentu.md  janice-godschalk.md  larry-salas.md  (+8 more)
faes_website/: __init__.py  __main__.py  config_loader.py  content_loader.py  csv_loader.py  org_loader.py  site_generator.py  staging_server.py
literate/: content_loader.md
process/: spec.md
static/: style.css
tests/: test_f01_scaffold.py  test_f02_content.py  test_f03_generator.py  test_f04_design.py  test_f05_deploy.py  test_f06_schema.py  test_f07_staging.py  test_f08_private.py  test_f09_csv.py  test_f10_board.py  test_f11_photos.py  test_f12_topbar.py  test_f13_grantee.py  test_f14_board_design.py  test_f15_language_switcher.py  test_f16_people_language_split.py  test_f17_csv_grants.py  test_f18_markdown_photo_shortcode.py  test_f19_grants_chart.py  test_f21_orgs.py
(+116 files in other folders)
